# ceptems-pyskills-ms

./: .gitignore  README.md  pyproject.toml
src/main/: PySkillServer.py  RestServer.py
src/main/resources/: manifest.yml
src/main/rest/: Blueprints.py
src/main/rest/config/: Constants.py
